.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SalesIQ__Territory__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Accounts__c</fullName>
        <label># Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__B__c</fullName>
        <label>B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Billable__c</fullName>
        <label>Billable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesIQ__District__c</fullName>
        <inlineHelpText>District name should be exactly the same as the Parent Role from Role Hierarchy</inlineHelpText>
        <label>District</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Drive_Time_Indicator__c</fullName>
        <label>Drive Time Indicator (hr)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__G__c</fullName>
        <label>G</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Is_Vacant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vacant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Opportunity__c</fullName>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesIQ__R__c</fullName>
        <label>R</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Region__c</fullName>
        <inlineHelpText>Region name should be exactly the same as the Region from the Role Hierarchy</inlineHelpText>
        <label>Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Alias__c</fullName>
        <label>Territory Alias</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Counter__c</fullName>
        <formula>Value(TRIM(RIGHT(RIGHT(SalesIQ__Territory_Id__c,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)),len(RIGHT(SalesIQ__Territory_Id__c,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)))- FIND(&apos;-&apos;, RIGHT(SalesIQ__Territory_Id__c,len(SalesIQ__Territory_Id__c)-FIND(&apos;-&apos;,SalesIQ__Territory_Id__c)) ) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Id__c</fullName>
        <label>Territory Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesIQ__Territory_Status__c</fullName>
        <inlineHelpText>Contains values Active, Inactive, Approved, Deleted, Rejected, Cancelled</inlineHelpText>
        <label>Territory Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Territory</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>SalesIQ__District__c</columns>
        <columns>SalesIQ__Region__c</columns>
        <columns>SalesIQ__Territory_Id__c</columns>
        <columns>SalesIQ__Territory_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SalesIQ__check_for_empty_name_while_insertupdate</fullName>
        <active>true</active>
        <description>Check for empty territory names</description>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Territory Name can&apos;t be blank</errorMessage>
    </validationRules>
</CustomObject>